--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -199,6 +199,12 @@
     </profiles>
     <dependencies>
         <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-petstore-feign</artifactId>
+            <version>LATEST</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.5.3</version>
